--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:ital,wght@1,300&family=Pacifico&display=swap');
 body{
     width: 1200px;
     margin: auto;
@@ -29,11 +30,65 @@ body{
     color: black;
     text-decoration: none;
   }
+  form{
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    align-items: center
+  }
+  fieldset{
+    padding: 30px;
+    text-align: center;
+    background-color: rgb(227, 227, 227);
+  }
+  legend{
+    font-weight: 700;
+    font-size: large;
+    padding: 20px;
+  }
+  #card {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    gap: 100px;
+    padding: 100px;
+    color: aliceblue;
+    
+  }
+  input,select{
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+    height: 30px;
+    
+  }
+  .btn{
+    width: 70px;
+    padding-left: 15px;
+
+  }
+
+  .card-content{
+  background-color: rgb(17, 102, 51);
+   padding: 10px;
+   font-family: 'Open Sans', sans-serif;
+   text-align: center;
+   margin: auto;
+  }
   main {
+    position: relative;
     height: auto;
     margin-top: 20px;
     background-color:white
+
   }
+
+img {
+  width: 250px;
+  height: 250px;
+
+}
   h3{
     display: flex;
     justify-content: center;
