--- a/css/accounting.css
+++ b/css/accounting.css
@@ -8,6 +8,7 @@ body{
     background-blend-mode: screen;
     display: flex;
     flex-direction: column;
+  
   }
   header nav{
     display: flex;
@@ -30,9 +31,25 @@ body{
     text-decoration: none;
   }
   main {
+    position: relative;
     height: 100%;
     margin-top: 20px;
     background-color:white
+  }
+  table{
+    margin-top: 30px;
+  position: absolute;
+  right: 40%;
+  left: 30%;
+  
+  }
+  table, th, td {
+    border: 1px solid;
+    width: 40%;
+    height: 20%;
+  }
+  th, td{
+    text-align: center;
   }
   h3{
     display: flex;
